# quickapi

./: .pre-commit-config.yaml  README.md  pyproject.toml
quickapi/: app.py  bonhamtime.py  buffer.py  ref_electrode.py
quickapi/plugins/: __init__.py  buffer.py  ref_electrode.py
quickapi/templates/: buffer.html  ref_electrode.html
